feat: Add lazy loading for images and fix image source in AnimeCard component

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "caniuse-lite": "^1.0.30001655",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
